--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ body  {
   </div>
 	<br class="clearfloat" />
    <div id="footer">
-    <p>Footer</p>
+    <p>songonyou@gmail.com</p>
   <!-- end #footer --></div>
 <!-- end #container --></div>
 </body>
